item component and service

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,54 @@
-/* You can add global styles to this file, and also import other style files */
+/* Application-wide Styles */
+.header {
+  width: 100%;
+  height: 100px;
+  text-align: center;
+}
+
+.panels {
+  height: 100%;
+  width: 100%;
+}
+
+.panel {
+  height: 100%;
+  width: 50%;
+  overflow-x: hidden;
+  padding: 10px;
+}
+
+.left {
+  left: 0;
+}
+
+.right {
+  right: 0;
+}
+
+.item {
+  margin: 5px;
+  padding: 10px;
+  box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.4);
+}
+
+h1 {
+    color: #369;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 250%;
+  }
+  h2, h3 {
+    color: #444;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+  }
+  body {
+    margin: 2em;
+  }
+  body, input[type="text"], button {
+    color: #333;
+    font-family: Cambria, Georgia;
+  }
+  /* everywhere else */
+  * {
+    font-family: Arial, Helvetica, sans-serif;
+  }
