--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,17 @@
 <div class="header">
     <h1>{{title}}</h1>
 </div>
-<div class="panels">
+
+<div class="left">
     <app-rentals></app-rentals>
+    <app-my-items></app-my-items>
+</div>
+
+<div class="right">
     <app-items></app-items>
 </div>
+
+
+
+
+
