--- a/src/styles.css
+++ b/src/styles.css
@@ -1,34 +1,40 @@
 /* Application-wide Styles */
 .header {
-  width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
   height: 100px;
   text-align: center;
 }
 
-.panels {
-  height: 100%;
-  width: 100%;
-}
-
-.panel {
-  height: 100%;
-  width: 50%;
+.left .right {
+  top: 100px;
   overflow-x: hidden;
   padding: 10px;
 }
 
 .left {
-  left: 0;
+  width: 50%;
+  float: left;
 }
 
 .right {
-  right: 0;
+  width: 50%;
+  float: right;
 }
 
 .item {
   margin: 5px;
   padding: 10px;
   box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.4);
+}
+
+.item button {
+  float: right;
+}
+
+.item button:hover {
+  background-color: lightgray;
 }
 
 h1 {
