--- a/src/app/my-items/my-items.component.html
+++ b/src/app/my-items/my-items.component.html
@@ -5,5 +5,6 @@
     <div><span>category: </span>{{item.category}}</div>
     <div><span>description: </span>{{item.description}}</div>
     <div><span>rented: </span>{{item.rented}}</div>
-    <div><span>available: </span>{{item.available}}</div>
+    <input type="checkbox" [(ngModel)]="item.available" (change)="changeAvailable(item)" id="available" />
+    <label for="available">available</label>
 </div>
