--- a/src/app/my-items/my-items.component.html
+++ b/src/app/my-items/my-items.component.html
@@ -1,10 +1,30 @@
 <span>My items to rent</span>
 
 <div class="item" *ngFor="let item of items">
-    <h2>{{item.name}}</h2>
-    <div><span>category: </span>{{item.category}}</div>
-    <div><span>description: </span>{{item.description}}</div>
-    <div><span>rented: </span>{{item.rented}}</div>
-    <input type="checkbox" [(ngModel)]="item.available" (change)="changeAvailable(item)" id="available" />
-    <label for="available">available</label>
+
+    <div class="item-left">
+        <h2>{{item.name}}</h2>
+        <div><span>category: </span>{{item.category}}</div>
+        <div><span>description: </span>{{item.description}}</div>
+    </div>
+
+    <div class="item-right">
+        <div>
+            <div *ngIf="item.rented">
+                <span>Item is rented  </span><button (click)="itemReturned(item)">Confirm Return</button>
+            </div>
+            <div *ngIf="!item.rented">
+                <span>Item is ready to rent</span>
+            </div>     
+        </div>
+        <div>
+            <input type="checkbox" [(ngModel)]="item.available" 
+                (change)="changeAvailable(item)" [disabled]="item.rented" id="available" />
+            <label for="available">available to rent</label>
+        </div>
+        <div>     
+            <button>Edit</button>
+        </div>
+    </div>
+
 </div>
