--- a/src/styles.css
+++ b/src/styles.css
@@ -27,14 +27,24 @@
   margin: 5px;
   padding: 10px;
   box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.4);
+  overflow:auto
 }
 
 .item button {
-  float: right;
+  width: 100%;
 }
 
 .item button:hover {
   background-color: lightgray;
+}
+
+.item-right {
+  float: right;
+  width: 35%;
+}
+
+.item-left {
+  float: left;
 }
 
 h1 {
@@ -42,19 +52,29 @@ h1 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 250%;
   }
-  h2, h3 {
+
+h2, h3 {
     color: #444;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
   }
-  body {
+
+body {
     margin: 2em;
   }
-  body, input[type="text"], button {
+  
+body, input[type="text"], button {
     color: #333;
     font-family: Cambria, Georgia;
   }
+
   /* everywhere else */
   * {
     font-family: Arial, Helvetica, sans-serif;
   }
+
+@media only screen and (max-width: 800px) {
+    .left .right {
+      width: 100%;
+    }
+}
