--- a/src/app/rentals/rentals.component.html
+++ b/src/app/rentals/rentals.component.html
@@ -12,7 +12,7 @@
     <div><span>owner: </span>{{rental.item.owner}}</div>
     <div><span>rental date: </span>{{rental.rentalDate| date:'dd/MM/yyyy' : 'UTC'}}</div>
     <div><span>rented for: </span>{{rental.rentalPeriod}}<span> days</span></div>
-    <div><span>only </span>{{diff(rental.rentalDate)}}<span> days left</span></div>
+    <div><span>days left: </span>{{diff(rental.rentalDate, rental.rentalPeriod)}}</div>
   </div>
 
 </div>
