no items found box added

--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -18,3 +18,7 @@
   </div>
 
 </div>
+
+<div *ngIf="items == undefined || items.length == 0" class="item center">
+  <h2>No items found</h2>
+</div>
