--- a/src/app/rentals/rentals.component.html
+++ b/src/app/rentals/rentals.component.html
@@ -16,3 +16,7 @@
   </div>
 
 </div>
+
+<div *ngIf="rentals == undefined || rentals.length == 0" class="item center">
+  <h2>No rentals found</h2>
+</div>
