--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header center">
     <h1>{{title}}</h1>
 </div>
 
@@ -10,8 +10,6 @@
 <div class="right">
     <app-items></app-items>
 </div>
-
-
 
 
 
