--- a/src/app/logging/logging.component.html
+++ b/src/app/logging/logging.component.html
@@ -1,1 +1,5 @@
-<p>logging works!</p>
+<select [(ngModel)]="loggedUserName" (change)="changeUserName()">
+    <option value = "Robert">Robert</option>
+    <option value = "Monika">Monika</option>
+    <option value = "Kazik">Kazik</option>
+</select>
