disable rent button on own item and new item button added

--- a/src/app/logging/logging.component.html
+++ b/src/app/logging/logging.component.html
@@ -4,3 +4,4 @@
     <option value = "Kazik">Kazik</option>
 </select>
 Logged as: {{loggedUserName}}
+<button (click)="changeUserName()">Reload</button>
