--- a/src/styles.css
+++ b/src/styles.css
@@ -30,7 +30,7 @@
   margin: 5px;
   padding: 10px;
   box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.4);
-  overflow:auto
+  overflow:auto;
 }
 
 .item button {
@@ -48,6 +48,11 @@
 
 .item-left {
   float: left;
+}
+
+.clikable:hover div {
+  transition: transform .4s;
+  background: rgb(211, 211, 211, 0.5)
 }
 
 h1 {
