--- a/src/app/my-items/edit-window/edit-window.component.html
+++ b/src/app/my-items/edit-window/edit-window.component.html
@@ -1,5 +1,5 @@
 <h1>Edit your item</h1>
-<p>Name: <input type="text" [(ngModel)]="item.name" /></p>
-<p>Description: <input type="text" [(ngModel)]="item.description" /></p>
-<button (click)="">Submit</button>
-<button (click)="">Cancel</button>
+<p>Name: <input type="text" /></p>
+<p>Description: <input type="text" /></p>
+<button >Submit</button>
+<button >Cancel</button>
