--- a/src/app/my-items/edit-window/edit-window.component.html
+++ b/src/app/my-items/edit-window/edit-window.component.html
@@ -1,5 +1,18 @@
-<h1>Edit your item</h1>
-<p>Name: <input type="text" /></p>
-<p>Description: <input type="text" /></p>
-<button >Submit</button>
-<button >Cancel</button>
+<div class="pop-up" *ngIf="popUpOpen">
+<div class="pop-up-box">
+    <header>
+      <span class="title">Edit your item</span>
+    </header>
+    <main>
+        <p>Name: <input type="text" [(ngModel)]="popUpItem.name"/></p>
+        <p>Description: <input type="text" [(ngModel)]="popUpItem.description"/></p>
+        <select [(ngModel)]="popUpItem.category">
+          <option *ngFor="let category of categories" [value]="category">{{category}}</option>
+        </select>
+    </main>
+    <footer>
+      <button (click)="saveItem()">Save</button>
+      <button (click)="closePopup()">Cancel</button>
+    </footer>
+</div>
+</div>
