--- a/src/app/my-items/my-items.component.html
+++ b/src/app/my-items/my-items.component.html
@@ -24,7 +24,7 @@
             <label for="available">available to rent</label>
         </div>
         <div>     
-            <button (click)="openAddItem(item)">Edit</button>
+            <button (click)="openEditItem(item)">Edit</button>
         </div>
     </div>
 
@@ -34,9 +34,12 @@
     <h2>No items found</h2>
 </div>
 
-<a *ngIf="loggedUserName != undefined" class="clickable" (click)="openAddItem(null)">
+<a *ngIf="loggedUserName != undefined" class="clickable" (click)="openAddItem()">
     <div class="item center">
         <h2>Add new item</h2>
     </div>
 </a>
 
+{{popUpOpen}}
+<app-edit-window [popUpOpen]="popUpOpen" [popUpItem]="popUpItem">
+</app-edit-window>
