--- a/src/app/my-items/my-items.component.html
+++ b/src/app/my-items/my-items.component.html
@@ -40,6 +40,5 @@
     </div>
 </a>
 
-{{popUpOpen}}
-<app-edit-window [popUpOpen]="popUpOpen" [popUpItem]="popUpItem">
+<app-edit-window [popUpOpen]="popUpOpen" [popUpItem]="popUpItem" [myCallback]="theBoundCallback">
 </app-edit-window>
