--- a/src/app/messages/messages.component.css
+++ b/src/app/messages/messages.component.css
@@ -1,35 +1,19 @@
-/* MessagesComponent's private CSS styles */
-h2 {
-    color: red;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: lighter;
-  }
-  body {
-    margin: 2em;
-  }
-  body, input[text], button {
-    color: crimson;
-    font-family: Cambria, Georgia;
-  }
-  
-  button.clear {
-    font-family: Arial;
-    background-color: #eee;
-    border: none;
-    padding: 5px 10px;
-    border-radius: 4px;
-    cursor: pointer;
-    cursor: hand;
-  }
-  button:hover {
-    background-color: #cfd8dc;
-  }
-  button:disabled {
-    background-color: #eee;
-    color: #aaa;
-    cursor: auto;
-  }
-  button.clear {
-    color: #333;
-    margin-bottom: 12px;
-  }
+.pop-up-box {
+  position: fixed;
+  z-index:10000;
+  width: 30%;
+  top: 50%;
+  left: 50%;
+  padding: 20px;
+  background: white;
+  text-align: center;
+  box-shadow: 4px 4px 10px #000;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+}
+
+.pop-up-box footer button {
+  margin-right: 20px;
+  width: 100px;
+}
