--- a/src/app/my-items/edit-window/edit-window.component.html
+++ b/src/app/my-items/edit-window/edit-window.component.html
@@ -13,7 +13,7 @@
         <option *ngFor="let category of categories" [value]="category">{{category}}</option>
       </select>
     <p>Rental Period:</p> 
-    <p><input type="number" min="1" [(ngModel)]="popUpItem.rentalPeriod"/>
+    <p><input type="number" min="1" max="7" [(ngModel)]="popUpItem.rentalPeriod"/>
     </p>
   </main>
   <footer>
