--- a/src/styles.css
+++ b/src/styles.css
@@ -56,6 +56,26 @@
   background: rgb(211, 211, 211, 0.5)
 }
 
+.pop-up-box {
+  position: fixed;
+  z-index:10000;
+  width: 30%;
+  top: 50%;
+  left: 50%;
+  padding: 20px;
+  background: white;
+  text-align: center;
+  box-shadow: 4px 4px 10px #000;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+}
+
+.pop-up-box footer button {
+  margin: 10px;
+  width: 100px;
+}
+
 h1 {
     color: #369;
     font-family: Arial, Helvetica, sans-serif;
