--- a/src/styles.css
+++ b/src/styles.css
@@ -32,6 +32,7 @@
   padding: 10px;
   box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.4);
   overflow:auto;
+  background-color: white;
 }
 
 .item button {
@@ -90,6 +91,7 @@ h2, h3 {
 
 body {
     margin: 2em;
+    background-color: lightgrey;
   }
   
 body, input[type="text"], button {
