--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
 /* Application-wide Styles */
+
+
 .header {
   top: 0;
   left: 0;
@@ -14,7 +16,7 @@
 .left .right {
   top: 100px;
   overflow-x: hidden;
-  padding: 10px;
+  padding: 50px;
 }
 
 .left {
@@ -26,6 +28,7 @@
   width: 50%;
   float: right;
 }
+
 
 .item {
   margin: 5px;
@@ -71,7 +74,7 @@ h2, h3 {
 body {
     margin: 2em;
   }
-  
+
 body, input[type="text"], button {
     color: #333;
     font-family: Cambria, Georgia;
@@ -82,8 +85,8 @@ body, input[type="text"], button {
     font-family: Arial, Helvetica, sans-serif;
   }
 
-@media only screen and (max-width: 800px) {
-    .left .right {
-      width: 100%;
+@media only screen and (max-width: 600px) {
+    .left, .right {
+      width: 98%;
     }
-}
+  }
