--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,36 @@
-/* Application-wide Styles */
+.welcome {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background:rgba(255,255,255,0.8);
+}
+
 .header {
   top: 0;
   left: 0;
   right: 0;
   height: 100px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.logo {
+ width: 20vh;
+ overflow: hidden;
+}
+
+.logo img {
+  clip: rect(300px, 0px, 3000px, 0px);
+}
+
+.logging {
+  display: inline-grid; 
+  margin: 10px;
+}
+
+.pop-up-box img {
+  max-width:100%;
+  max-height:100%;
 }
 
 .center {
@@ -28,11 +54,20 @@
 }
 
 .item {
-  margin: 5px;
+  margin: 10px;
   padding: 10px;
   box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.4);
   overflow:auto;
   background-color: white;
+  border-radius: 5px;
+}
+
+.img_frame {
+  width: 120px;
+}
+
+.item img {
+  height: 120px;
 }
 
 .item button {
@@ -90,8 +125,8 @@ h2, h3 {
   }
 
 body {
-    margin: 2em;
     background-color: lightgrey;
+    margin: 0;
   }
   
 body, input[type="text"], button {
