--- a/src/app/logging/logging.component.html
+++ b/src/app/logging/logging.component.html
@@ -2,6 +2,7 @@
     <option value = "Robert">Robert</option>
     <option value = "Monika">Monika</option>
     <option value = "Kazik">Kazik</option>
+    <option value = "Kamila">Kamila</option>
 </select>
 Logged as: {{loggedUserName}}
 <button (click)="changeUserName()">Reload</button>
