--- a/src/app/my-items/my-items.component.html
+++ b/src/app/my-items/my-items.component.html
@@ -1,42 +1,42 @@
-<h2>My items to rent</h2>
+<h2>Mogę pożyczyć:</h2>
 
 <div class="item" *ngFor="let item of items; index as i">
 
     <div class="item-left">
         <h2>{{item.name}}</h2>
-        <div><span>category: </span>{{item.category}}</div>
-        <div><span>description: </span>{{item.description}}</div>
+        <div><span>kategoria: </span>{{item.category}}</div>
+        <div><span>opis: </span>{{item.description}}</div>
     </div>
 
     <div class="item-right">
         <div>
             <div *ngIf="item.rented">
-                <span>Item is rented for {{item.rentalPeriod}} days</span><button (click)="itemReturned(item)">Confirm Return</button>
+                <span>Przedmiot jest pożyczony na {{item.rentalPeriod}} dni</span><button (click)="itemReturned(item)">Potwierdź zwrot</button>
             </div>
             <div *ngIf="!item.rented">
-                <span *ngIf="item.available">Item is ready to rent for {{item.rentalPeriod}} days</span>
-                <span *ngIf="!item.available">Item is not available</span>
-            </div>     
+                <span *ngIf="item.available">Przedmiot jest gotowy do wypożyczenia na {{item.rentalPeriod}} dni</span><br>
+                <span *ngIf="!item.available">Przedmiot jest niedostępny</span>
+            </div>
         </div>
         <div>
-            <input type="checkbox" [(ngModel)]="item.available" 
+            <input type="checkbox" [(ngModel)]="item.available"
                 (change)="changeAvailable(item)" [disabled]="item.rented" id="available" />
-            <label for="available">available to rent</label>
+            <label for="available">gotowy do wypożyczenia</label>
         </div>
-        <div>     
-            <button (click)="openEditItem(item, i)">Edit</button>
+        <div>
+            <button (click)="openEditItem(item, i)">Edytuj</button>
         </div>
     </div>
 
 </div>
 
 <div *ngIf="items == undefined || items.length == 0" class="item center">
-    <h2>No items found</h2>
+    <h2>Nic nie udostępniasz do wypożyczenia. <br> Pora to zmienić! :)</h2>
 </div>
 
 <a *ngIf="loggedUserName != undefined" class="clickable" (click)="openAddItem()">
     <div class="item center">
-        <h2>Add new item</h2>
+        <h2>Dodaj nowy przedmiot</h2>
     </div>
 </a>
 
