--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,15 @@
 /* Application-wide Styles */
 
+html {
+  background-image: url(canstockphoto45204351.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  }
+
+div {
+  background-color: whitesmoke;
+}
 
 .header {
   top: 0;
@@ -31,9 +41,9 @@
 
 
 .item {
-  margin: 5px;
-  padding: 10px;
-  box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.4);
+  margin: 20px;
+  padding: 20px;
+
   overflow:auto;
 }
 
