--- a/src/styles.css
+++ b/src/styles.css
@@ -122,6 +122,8 @@ h2, h3 {
     color: #444;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
+    margin-left: 20px;
+    margin-right: 20px;
   }
 
 body {
