adjustment to new entities

--- a/src/app/logging/logging.component.html
+++ b/src/app/logging/logging.component.html
@@ -19,7 +19,7 @@
 </div>
 </div>
 
-Logged as: {{loggedUserName}}
+Logged as: {{loggedUserName}}, points: {{userPoints}}
 <button (click)="changeUserName()">Reload</button> 
 <button (click)="logout()">Logout</button>
 
