--- a/src/styles.css
+++ b/src/styles.css
@@ -2,15 +2,14 @@
 /* Application-wide Styles */
 
 html {
-  background-image: url(canstockphoto45204351.jpg);
+  background-image: url(canstockphoto45204351.jpg),
+    linear-gradient(black, black);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   }
 
-div {
-  background-color: whitesmoke;
-}
+
 
 .welcome {
   position: fixed;
@@ -25,7 +24,7 @@ div {
   left: 0;
   right: 0;
   height: 100px;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: 'Tenor Sans', sans-serif;
 }
 
 .logo {
@@ -55,16 +54,17 @@ div {
   top: 100px;
   overflow-x: hidden;
   padding: 50px;
+  background-color: rgba(255, 255, 255, 0.5) ;
 }
 
 .left {
   width: 50%;
-  float: left;
+  float: right;
 }
 
 .right {
   width: 50%;
-  float: right;
+  float: left;
 }
 
 .item {
@@ -73,7 +73,7 @@ div {
   padding: 10px;
   box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.4);
   overflow:auto;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.5) ;
   border-radius: 5px;
 }
 
@@ -94,12 +94,12 @@ div {
 }
 
 .item-right {
-  float: right;
+  float: left;
   width: 35%;
 }
 
 .item-left {
-  float: left;
+  float: right;
 }
 
 .clickable:hover div {
@@ -129,29 +129,26 @@ div {
 
 h1 {
     color: #369;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Tenor Sans', sans-serif;
     font-size: 250%;
   }
 
 h2, h3 {
     color: #444;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Tenor Sans', sans-serif;
     font-weight: lighter;
   }
 
-body {
-    background-color: lightgrey;
-    margin: 0;
-  }
+
 
 body, input[type="text"], button {
     color: #333;
-    font-family: Cambria, Georgia;
+    font-family: 'Tenor Sans', sans-serif;
   }
 
   /* everywhere else */
   * {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Tenor Sans', sans-serif;
   }
 
 @media only screen and (max-width: 600px) {
