image when edit item

--- a/src/app/my-items/edit-window/edit-window.component.html
+++ b/src/app/my-items/edit-window/edit-window.component.html
@@ -4,6 +4,9 @@
     <span class="title">Edit your item</span>
   </h2>
   <main>
+    <div class = "img_frame">
+      <img (error)="changeImg($event)" [src]="(shareService.homeUrl + '/images/' + popUpItem.imageName)"/>
+    </div>
     <p>Name:</p> 
     <p><input type="text" [(ngModel)]="popUpItem.name"/></p>
     <p>Description:</p> 
