--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
   width: 100%;
   height: 100%;
   background-size: cover;
-  background:rgba(255,255,255,0.8);
+  background-position: center;
 }
 
 .header {
