--- a/src/app/logging/logging.component.html
+++ b/src/app/logging/logging.component.html
@@ -20,9 +20,9 @@
 </div>
 </div>
 
-Logged as: {{loggedUserName}}, points: {{userPoints}}
-<button (click)="changeUserName()">Reload</button> 
-<button (click)="logout()">Logout</button>
+Zalogowano jako: {{loggedUserName}}, punktów: {{userPoints}}
+<button (click)="changeUserName()">Odśwież</button>
+<button (click)="logout()">Wyloguj</button>
 
 <!--
 <div  *ngIf="!loggedUserName">
