--- a/src/app/my-items/edit-window/edit-window.component.html
+++ b/src/app/my-items/edit-window/edit-window.component.html
@@ -8,7 +8,7 @@
     <p><input type="text" [(ngModel)]="popUpItem.name"/></p>
     <p>Opis:</p>
     <p><input type="text" [(ngModel)]="popUpItem.description"/></p>
-    <p>Image filename:</p> 
+    <p>Nazwa pliku obrazu:</p>
     <p><input type="text" [(ngModel)]="popUpItem.imageName"/></p>
     <p>Kategoria:
       <select [(ngModel)]="popUpItem.category">
