--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,8 @@
-<app-logging></app-logging>
+<div class="log_in_out"> <app-logging></app-logging> </div>
 
 <app-messages></app-messages>
 
-
-<div class="header center">
-    <h1>{{title}}</h1>
-</div>
-
-
+<div class="header center"></div>
 
 <div class="right">
     <app-items></app-items>
