--- a/src/styles.css
+++ b/src/styles.css
@@ -2,13 +2,11 @@
 /* Application-wide Styles */
 
 html {
-  background-image: url(canstockphoto45204351.jpg),
-    linear-gradient(black, black);
+  background-image: url(canstockphoto45204351.jpg);
   background-repeat: no-repeat;
-  background-position: center;
   background-size: cover;
+  background-attachment: fixed;
   }
-
 
 
 .welcome {
@@ -16,7 +14,8 @@ html {
   width: 100%;
   height: 100%;
   background-size: cover;
-  background:rgba(255,255,255,0.8);
+
+  background: rgba(255, 255, 255, 0.8);
 }
 
 .header {
@@ -24,7 +23,18 @@ html {
   left: 0;
   right: 0;
   height: 100px;
-  font-family: 'Tenor Sans', sans-serif;
+  font-family: Shopify Sans Web,Roboto,Segoe UI,Helvetica Neue,sans-serif;
+  color: #03414d;
+
+}
+
+.search {
+background-color: #A3BCBF;
+margin: 10px;
+padding: 10px;
+box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.4);
+overflow:auto;
+border-radius: 5px;
 }
 
 .logo {
@@ -36,8 +46,17 @@ html {
   clip: rect(300px, 0px, 3000px, 0px);
 }
 
+.body_logo {
+  float: left;
+  width: max-content;
+ }
+
+.log_in_out {
+  text-align: right;
+   }
+
 .logging {
-  display: inline-grid;
+
   margin: 10px;
 }
 
@@ -54,17 +73,17 @@ html {
   top: 100px;
   overflow-x: hidden;
   padding: 50px;
-  background-color: rgba(255, 255, 255, 0.5) ;
+  background-color: rgba(255, 255, 255, 0.7) ;
 }
 
 .left {
   width: 50%;
-  float: right;
+  float: left;
 }
 
 .right {
   width: 50%;
-  float: left;
+  float: right;
 }
 
 .item {
@@ -73,7 +92,7 @@ html {
   padding: 10px;
   box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.4);
   overflow:auto;
-  background-color: rgba(255, 255, 255, 0.5) ;
+  background-color: rgba(255, 255, 255, 0.7) ;
   border-radius: 5px;
 }
 
@@ -90,21 +109,22 @@ html {
 }
 
 .item button:hover {
-  background-color: lightgray;
+  background-color: #A3BCBF;
 }
 
 .item-right {
-  float: left;
+  float: right;
   width: 35%;
 }
 
 .item-left {
-  float: right;
+  float: left;
+  width: 60%;
 }
 
 .clickable:hover div {
   transition: transform .4s;
-  background: rgb(211, 211, 211, 0.5)
+  background: #A3BCBF
 }
 
 .pop-up-box {
@@ -114,9 +134,9 @@ html {
   top: 50%;
   left: 50%;
   padding: 20px;
-  background: white;
+  background: rgba(255, 255, 255, 0.7) ;
   text-align: center;
-  box-shadow: 4px 4px 10px #000;
+  box-shadow: 2px 2px 10px #000;
   transform: translate(-50%, -50%);
   -webkit-transform: translate(-50%, -50%);
   -moz-transform: translate(-50%, -50%);
@@ -129,28 +149,32 @@ html {
 
 h1 {
     color: #369;
-    font-family: 'Tenor Sans', sans-serif;
+    font-family: Shopify Sans Web,Roboto,Segoe UI,Helvetica Neue,sans-serif;
     font-size: 250%;
-  }
+    color: #03414d;
+}
 
 h2, h3 {
-    color: #444;
-    font-family: 'Tenor Sans', sans-serif;
+    color: #A3BCBF;
+    font-family: Shopify Sans Web,Roboto,Segoe UI,Helvetica Neue,sans-serif;
     font-weight: lighter;
-    margin-left: 20px;
-    margin-right: 20px;
+    color: #03414d;
+    margin-left: 10px;
+    margin-right: 10px;
   }
 
 
 
 body, input[type="text"], button {
     color: #333;
-    font-family: 'Tenor Sans', sans-serif;
+    font-family: Shopify Sans Web,Roboto,Segoe UI,Helvetica Neue,sans-serif;
+    color: #03414d;
   }
 
   /* everywhere else */
   * {
-    font-family: 'Tenor Sans', sans-serif;
+    font-family: Shopify Sans Web,Roboto,Segoe UI,Helvetica Neue,sans-serif;
+    color: #03414d;
   }
 
 @media only screen and (max-width: 600px) {
