--- a/src/app/logging/logging.component.html
+++ b/src/app/logging/logging.component.html
@@ -1,4 +1,4 @@
-<div class="welcome" *ngIf="!loggedUserName" [style.background]="'url(' + background_graty + ')'">
+<div class="welcome" *ngIf="!loggedUserName" [style.background]="'url(' + backgroundLogging + ')'">
 <div class="pop-up-box" >
     <h2>
         <img [src]="logo" />
