--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,7 @@ html {
   height: 100%;
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
 }
 
 .header {
@@ -133,7 +134,7 @@ border-radius: 5px;
   top: 50%;
   left: 50%;
   padding: 20px;
-  background: rgba(255, 255, 255, 0.7) ;
+  background: rgba(255, 255, 255, 0.8) ;
   text-align: center;
   box-shadow: 2px 2px 10px #000;
   transform: translate(-50%, -50%);
