--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
-<app-logging></app-logging>
-
-<app-messages></app-messages>
-
-
+<div class="welcome" [style.background-image]="'url(' + background + ')'">
 <div class="header center">
     <h1>{{title}}</h1>
 </div>
@@ -16,5 +12,9 @@
     <app-items></app-items>
 </div>
 
+</div>
 
+<app-logging></app-logging>
+
+<app-messages></app-messages>
 
