--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
-<div class="welcome" [style.background-image]="'url(' + background + ')'">
+<div class="panel" [style.background-image]="'url(' + background + ')'">
+
+<app-logging></app-logging>
+
+<app-messages></app-messages>
+
+<div>
 <div class="header center">
     <h1>{{title}}</h1>
 </div>
@@ -11,10 +17,9 @@
 <div class="right">
     <app-items></app-items>
 </div>
+</div>
 
 </div>
 
-<app-logging></app-logging>
 
-<app-messages></app-messages>
 
