--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,11 @@
+.panel {
+  height: 100%;
+  width: 100%;
+  background-repeat: repeat;
+  background-size: cover;
+  overflow-x: scroll;
+}
+
 .welcome {
   position: fixed;
   width: 100%;
