--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -7,3 +7,10 @@
         </footer>
     </div>
 </div>
+
+
+<div class="loader" *ngIf="shareService.loader">
+    <div class="pop-up-box loader-box">
+        <div class="loader circle-loader-1"></div>
+    </div>
+</div>
