--- a/src/app/my-items/edit-window/edit-window.component.html
+++ b/src/app/my-items/edit-window/edit-window.component.html
@@ -4,7 +4,7 @@
     <span class="title">Edit your item</span>
   </h2>
   <main>
-    <div class = "img_frame">
+    <div class = "img_frame centerDiv">
       <img (error)="changeImg($event)" [src]="(shareService.homeUrl + '/images/' + popUpItem.imageName)"/>
     </div>
     <p>Name:</p> 
