--- a/src/app/logging/logging.component.html
+++ b/src/app/logging/logging.component.html
@@ -19,13 +19,7 @@
 </div>
 </div>
 
-Logged as: {{loggedUserName}}, points: {{userPoints}} <!-- , points: {{userPoints}}-->
+Logged as: {{loggedUserName}}, points: {{userPoints}}
 <button (click)="changeUserName()">Reload</button> 
 <button (click)="logout()">Logout</button>
 
-
-<!-- 
-<div  *ngIf="!loggedUserName">
-    <img [src]="background" />
-</div>
--->
