--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,9 @@
 
 <div>
 <div class="header center">
-    <h1>{{title}}</h1>
+    <div class="logo"> 
+        <img [src]="logo" />
+    </div>
 </div>
 
 <div class="left">
