--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -8,7 +8,7 @@
   <input type="text" [(ngModel)]="namePart" (keyup)="searchByNamePart()"/>
 </h2>
 
-<div class="item" *ngFor="let item of items">
+<div class="item height120" *ngFor="let item of items">
 
   <div class="item-left">
     <div class = "img_frame">
