--- a/src/styles.css
+++ b/src/styles.css
@@ -18,17 +18,18 @@
   top: 0;
   left: 0;
   right: 0;
-  height: 100px;
+  height: 80px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .logo {
- width: 20vh;
  overflow: hidden;
+ max-width: 400px;
 }
 
 .logo img {
-  clip: rect(300px, 0px, 3000px, 0px);
+  max-width: 100%;
+  margin-top: -40%;
 }
 
 .logging {
@@ -73,18 +74,34 @@
   overflow:auto;
   background-color: white;
   border-radius: 5px;
+  background: linear-gradient(to right,
+     rgba(255,255,255, 1) 50%, 
+     rgba(255,255,255, 0) 80%
+  );
+}
+
+.height120 {
+  height: 120px;
 }
 
 .img_frame {
   width: 120px;
+  height: 120px;
+  text-align: center;
 }
 
 .item img {
-  height: 120px;
+  max-height: 100%;
+  max-width: 100%;
+  vertical-align: middle;
 }
 
 .item button {
   width: 100%;
+}
+
+.item button.half {
+  width: 50%;
 }
 
 .item button:hover {
@@ -158,7 +175,7 @@ body, input[type="text"], button {
     font-family: Arial, Helvetica, sans-serif;
   }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1000px) {
     .left, .right {
       width: 100%;
     }
