--- a/src/app/logging/logging.component.html
+++ b/src/app/logging/logging.component.html
@@ -1,3 +1,4 @@
+<div *ngIf="!loggedUserName">
 <div class="welcome" *ngIf="!loggedUserName" [style.background-image]="'url(' + background_graty + ')'">
 <div class="pop-up-box" >
     <h2>
@@ -17,6 +18,14 @@
     </footer>
 </form>
 </div>
+</div>
+<div class="empty"></div>
+<div class="about">
+  <h1><i>RentAll to platforma lokalnych społeczności</i></h1>
+  <h1><i>Poznaj i polub swoich sąsiadów</i></h1>
+  <h1><i>Ich śmieci mogą być Twoim skarbem</i></h1>
+</div>
+<div class="bottom" [style.background-image]="'url(' + hands + ')'"></div>
 </div>
 
 Logged as: {{loggedUserName}}, points: {{userPoints}}
