Dodano logo, poprawiono divy, mniejsze poprawki

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,19 @@
-<div class="log_in_out"> <app-logging></app-logging> </div>
+
+
+<div class="log_in_out">
+  <app-logging></app-logging>
+</div>
+
+
 
 <app-messages></app-messages>
 
-<div class="header center"></div>
+
+<div class="header_center"></div>
+
 
 <div class="right">
-    <app-items></app-items>
+  <app-items></app-items>
 </div>
 
 <div class="left">
