--- a/src/app/rentals/rentals.component.html
+++ b/src/app/rentals/rentals.component.html
@@ -10,11 +10,11 @@
   </div>
 
   <div class="item-right">
-    <div><span>owner: </span>{{rental.item.owner}}</div>
-    <div *ngIf="rental.confirmedDate"><span>rental date: </span>{{rental.rentalDate| date:'dd/MM/yyyy' : 'UTC'}}</div>
-    <div *ngIf="rental.confirmedDate"><span>rented for: </span>{{rental.rentalPeriod}}<span> days</span></div>
-    <div *ngIf="rental.confirmedDate"><span>days left: </span>{{diff(rental.rentalDate, rental.rentalPeriod)}}</div>
-    <div *ngIf="!rental.confirmedDate"><span>Reserved, waiting for user decision</span></div>
+    <div><span>właściciel: </span>{{rental.item.owner}}</div>
+    <div *ngIf="rental.confirmedDate"><span>data wypożyczenia: </span>{{rental.rentalDate| date:'dd/MM/yyyy' : 'UTC'}}</div>
+    <div *ngIf="rental.confirmedDate"><span>pożyczono na: </span>{{rental.rentalPeriod}}<span> dni</span></div>
+    <div *ngIf="rental.confirmedDate"><span>pozostało dni: </span>{{diff(rental.rentalDate, rental.rentalPeriod)}}</div>
+    <div *ngIf="!rental.confirmedDate"><span>zarezerwowano, oczekiwanie na decyzję</span></div>
   </div>
 
 </div>
