--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,7 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  background-position: center;
   }
 
 
@@ -18,23 +19,35 @@ html {
   background-repeat: no-repeat;
 }
 
-.header {
+.header_center {
   top: 0;
   left: 0;
   right: 0;
-  height: 100px;
+  height: 150px;
   font-family: Shopify Sans Web,Roboto,Segoe UI,Helvetica Neue,sans-serif;
   color: #03414d;
-
+  text-align: center;
+  background-image: url(logo_transparent_small.png);
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .search {
-background-color: #A3BCBF;
+background-color: rgba(163, 188, 191, 0.6);
 margin: 10px;
 padding: 10px;
 box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.4);
 overflow:auto;
 border-radius: 5px;
+}
+
+.search_methods {
+  width: 60%;
+  float: left;
+}
+
+.item.center {
+  text-align: center;
 }
 
 .logo {
@@ -46,14 +59,11 @@ border-radius: 5px;
   clip: rect(300px, 0px, 3000px, 0px);
 }
 
-.body_logo {
-  float: left;
-  width: max-content;
- }
 
 .log_in_out {
   text-align: right;
-   }
+
+}
 
 .logging {
 
@@ -61,19 +71,20 @@ border-radius: 5px;
 }
 
 .pop-up-box img {
-  max-width:100%;
-  max-height:100%;
+
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+
 }
 
-.center {
-  text-align: center;
-}
 
 .left .right {
   top: 100px;
   overflow-x: hidden;
-  padding: 50px;
-  background-color: rgba(255, 255, 255, 0.7) ;
+  padding: 10px;
+
 }
 
 .left {
@@ -97,11 +108,19 @@ border-radius: 5px;
 }
 
 .img_frame {
-  width: 120px;
+
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+
 }
 
 .item img {
-  height: 120px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
 }
 
 .item button {
@@ -109,22 +128,22 @@ border-radius: 5px;
 }
 
 .item button:hover {
-  background-color: #A3BCBF;
+  background-color: rgba(163, 188, 191, 0.7);
 }
 
 .item-right {
   float: right;
-  width: 35%;
+  width: 50%;
 }
 
 .item-left {
   float: left;
-  width: 60%;
+
 }
 
 .clickable:hover div {
   transition: transform .4s;
-  background: #A3BCBF
+  background: rgba(163, 188, 191, 0.7)
 }
 
 .pop-up-box {
@@ -134,13 +153,15 @@ border-radius: 5px;
   top: 50%;
   left: 50%;
   padding: 20px;
-  background: rgba(255, 255, 255, 0.8) ;
+  background: rgba(255, 255, 255, 0.85) ;
   text-align: center;
   box-shadow: 2px 2px 10px #000;
   transform: translate(-50%, -50%);
   -webkit-transform: translate(-50%, -50%);
   -moz-transform: translate(-50%, -50%);
 }
+
+
 
 .pop-up-box footer button {
   margin: 10px;
@@ -155,15 +176,16 @@ h1 {
 }
 
 h2, h3 {
-    color: #A3BCBF;
     font-family: Shopify Sans Web,Roboto,Segoe UI,Helvetica Neue,sans-serif;
-    font-weight: lighter;
+    font-weight: 500;
     color: #03414d;
     margin-left: 10px;
     margin-right: 10px;
   }
 
-
+.description_part {
+  float: left;
+}
 
 body, input[type="text"], button {
     color: #333;
@@ -177,8 +199,13 @@ body, input[type="text"], button {
     color: #03414d;
   }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
     .left, .right {
-      width: 98%;
+      width: 100%;
     }
+  }
+
+@media all and (max-width:750px) {
+
+    .header_center {background-position: center;}
   }
