--- a/src/styles.css
+++ b/src/styles.css
@@ -23,7 +23,7 @@
   top: 0;
   left: 0;
   right: 0;
-  height: 80px;
+  height: 90px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
@@ -34,7 +34,12 @@
 
 .logo img {
   max-width: 100%;
-  margin-top: -40%;
+  margin-top: -35%;
+}
+
+.user {
+  float: right;
+  margin: 20px;
 }
 
 .logging {
