--- a/src/app/logging/logging.component.html
+++ b/src/app/logging/logging.component.html
@@ -1,30 +1,55 @@
 <div class="welcome" *ngIf="!loggedUserName" [style.background-image]="'url(' + background_graty + ')'">
-<div class="pop-up-box" >
+  <div class="pop-up-box" *ngIf="!registerPopup">
     <h2>
-        <img [src]="logo" />
+      <img [src]="logo" />
       <span class="title">Zaloguj się</span>
     </h2>
     <form #formData="ngForm" (ngSubmit)="login(formData)">
+      <main>
+        <p>Nazwa użytkownika:</p>
+        <p><input ngModel name="name" required /></p>
+        <p>Hasło:</p>
+        <p><input ngModel type="password" name="password" required /></p>
+      </main>
+      <footer>
+        <button type="submit" [disabled]="formData.invalid">Zaloguj</button>
+        <button (click)="openRegister()">Zarejestruj się</button>
+      </footer>
+    </form>
+  </div>
+</div>
+
+<div class="pop-up-box" *ngIf="registerPopup">
+  <h2>
+    <img [src]="logo" />
+    <span class="title">Zarejestruj się</span>
+  </h2>
+  <form #formData="ngForm" (ngSubmit)="register(formData)">
     <main>
-      <p>Nazwa użytkownika:</p> 
-      <p><input ngModel name="name" required></p>
-      <p>Hasło:</p> 
-      <p><input ngModel type="password" name="password" required></p>
+      <p>Nazwa użytkownika:</p>
+      <p><input ngModel name="name" required /></p>
+      <p>Hasło:</p>
+      <p><input ngModel type="password" name="password" required /></p>
+      <p>Email:</p>
+      <p><input ngModel type="email" name="eMail" required /></p>
+      <p>Numer telefonu:</p>
+      <p><input ngModel name="phoneNumber" required /></p>
     </main>
     <footer>
-        <button type="submit" [disabled]="formData.invalid">Zaloguj</button>
-      <button>Zarejestruj się</button>
+      <button type="submit" [disabled]="formData.invalid">
+        Zarejestruj sie
+      </button>
+      <button (click)="backToLogin()">Wróć</button>
     </footer>
-</form>
-</div>
+  </form>
 </div>
 
-Logged as: {{loggedUserName}}, points: {{userPoints}}
-<button (click)="changeUserName()">Reload</button> 
+
+Logged as: {{ loggedUserName }}, points: {{ userPoints }}
+<button (click)="changeUserName()">Reload</button>
 <button (click)="logout()">Logout</button>
 
-
-<!-- 
+<!--
 <div  *ngIf="!loggedUserName">
     <img [src]="background" />
 </div>
