--- a/src/app/logging/logging.component.html
+++ b/src/app/logging/logging.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="!loggedUserName">
 <div class="welcome" *ngIf="!loggedUserName" [style.background-image]="'url(' + background_graty + ')'">
-<div class="pop-up-box" >
+
+<div class="pop-up-box" *ngIf="!registerPopup">
     <h2>
         <img [src]="logo" />
       <span class="title">Zaloguj się</span>
@@ -14,18 +15,45 @@
     </main>
     <footer>
         <button type="submit" [disabled]="formData.invalid">Zaloguj</button>
-      <button>Zarejestruj się</button>
+        <button (click)="openRegister()">Zarejestruj się</button>
     </footer>
 </form>
 </div>
+
+  <div class="pop-up-box" *ngIf="registerPopup">
+    <h2>
+      <img [src]="logo" />
+      <span class="title">Zarejestruj się</span>
+    </h2>
+    <form #formData="ngForm" (ngSubmit)="register(formData)">
+      <main>
+        <p>Nazwa użytkownika:</p>
+        <p><input ngModel name="name" required /></p>
+        <p>Hasło:</p>
+        <p><input ngModel type="password" name="password" required /></p>
+        <p>Email:</p>
+        <p><input ngModel type="email" name="eMail" required /></p>
+        <p>Numer telefonu:</p>
+        <p><input ngModel name="phoneNumber" required /></p>
+      </main>
+      <footer>
+        <button type="submit" [disabled]="formData.invalid">Zarejestruj sie</button>
+        <button (click)="backToLogin()">Wróć</button>
+      </footer>
+    </form>
+  </div>
+
+
 </div>
+<!--
 <div class="empty"></div>
 <div class="about">
   <h1><i>RentAll to platforma lokalnych społeczności</i></h1>
   <h1><i>Poznaj i polub swoich sąsiadów</i></h1>
-  <h1><i>Ich śmieci mogą być Twoim skarbem</i></h1>
+  <h1><i>Ich śmieci mogą być Twoim skarbem ;)</i></h1>
 </div>
 <div class="bottom" [style.background-image]="'url(' + hands + ')'"></div>
+-->
 </div>
 
 <div class="user">
