--- a/src/app/logging/logging.component.html
+++ b/src/app/logging/logging.component.html
@@ -59,8 +59,8 @@
 </div>
 
 <div class="user">
-  Logged as: {{loggedUserName}}, points: {{userPoints}}
+  Zalogowano jako: {{loggedUserName}}, punktów: {{userPoints}}
   <button>Ustawienia</button>
-  <button (click)="logout()">Logout</button>
-  <button (click)="changeUserName()">Reload</button> 
+  <button (click)="logout()">Wyloguj</button>
+  <button (click)="changeUserName()">Odśwież</button> 
 </div>
