--- a/src/styles.css
+++ b/src/styles.css
@@ -219,3 +219,30 @@ body, input[type="text"], button {
       width: 100%;
     }
 }
+
+
+
+
+
+.search {
+background-color: rgba(163, 188, 191, 0.6);
+margin: 10px;
+padding: 10px;
+box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.4);
+overflow:auto;
+border-radius: 5px;
+}
+
+.search_methods {
+  width: 60%;
+  float: left;
+}
+
+
+
+
+
+@media all and (max-width:750px) {
+
+  .header_center {background-position: center;}
+}
